--- a/Project/Oursourcing_HRM/web/WEB-INF/web.xml
+++ b/Project/Oursourcing_HRM/web/WEB-INF/web.xml
@@ -16,10 +16,17 @@
         <servlet-name>NullServlet</servlet-name>
         <servlet-class>Servlets.NullServlet</servlet-class>
     </servlet>
+
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>Servlets.LogoutServlet</servlet-class>
+    </servlet>
+
     <servlet>
         <servlet-name>PrintHTMLServlet</servlet-name>
         <servlet-class>Servlets.PrintHTMLServlet</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>CenterServlet</servlet-name>
         <url-pattern>/CenterServlet</url-pattern>
@@ -35,6 +42,10 @@
     <servlet-mapping>
         <servlet-name>NullServlet</servlet-name>
         <url-pattern>/NullServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>PrintHTMLServlet</servlet-name>
